# voltronformers

./: README.md  pyproject.toml  requirements.txt  train.py
src/: train.py
src/voltronformer/: config.py  core.py  infini_attention.py  mod.py  model.py  utils.py
src/voltronformer/bitlinear/: __init__.py  attention.py  cg123.py  official.py
src/voltronformer/kernels/: activations.py  rms_norm.py
src/voltronformer/train/: collators.py  data.py  samplers.py
