[project]
name = "voltronformers"
dynamic = ["version"]
requires-python = ">= 3.10"
dependencies = [
    "bitnet",
    "schedulefree",
    "bitsandbytes",
    "datasets",
    "einops",
    "flash-attn",
    "wandb",
    "tqdm",
    "transformers==4.39.3",
    "axolotl @ git+https://github.com/openaccess-ai-collective/axolotl.git@main",
    "denseformer @ git+https://github.com/epfml/DenseFormer.git@main",
]
maintainers = [
    {name="Wing Lian", email="wing.lian@gmail.com"},
]
description = "voltronformers: Assembling the best SotA AI techniques into a unified model"

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "black",
    "mypy",
    "pytest",
]
